local-services/nas/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.1.11
    ports:
      - port: 5000
        protocol: TCP
