local-services/nas/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
